P2-Parser/y.output
Terminals unused in grammar

   ERROR


Grammar

    0 $accept: program $end

    1 program: declaration_list

    2 id: ID

    3 num: NUM

    4 declaration_list: declaration declaration_list
    5                 | declaration

    6 declaration: var_declaration
    7            | fun_declaration

    8 var_declaration: INT id SEMI
    9                | VOID id SEMI
   10                | INT id LBRACE num RBRACE SEMI
   11                | VOID id LBRACE num RBRACE SEMI

   12 @1: %empty

   13 fun_declaration: INT id @1 LPAREN params RPAREN compound_stmt

   14 @2: %empty

   15 fun_declaration: VOID id @2 LPAREN params RPAREN compound_stmt

   16 params: param_list
   17       | VOID

   18 param_list: param_list COMMA param
   19           | param

   20 param: INT id
   21      | VOID id
   22      | INT id LBRACE RBRACE
   23      | VOID id LBRACE RBRACE

   24 compound_stmt: LCURLY local_declarations statement_list RCURLY

   25 local_declarations: local_declarations var_declaration
   26                   | %empty

   27 statement_list: statement_list statement
   28               | %empty

   29 statement: expression_stmt
   30          | compound_stmt
   31          | selection_stmt
   32          | iteration_stmt
   33          | return_stmt

   34 expression_stmt: expression SEMI
   35                | SEMI

   36 selection_stmt: IF LPAREN expression RPAREN statement
   37               | IF LPAREN expression RPAREN statement ELSE statement

   38 iteration_stmt: WHILE LPAREN expression RPAREN statement

   39 return_stmt: RETURN SEMI
   40            | RETURN expression SEMI

   41 expression: var ASSIGN expression
   42           | simple_expression

   43 var: id

   44 @3: %empty

   45 var: id @3 LBRACE expression RBRACE

   46 simple_expression: additive_expression LE additive_expression
   47                  | additive_expression LT additive_expression
   48                  | additive_expression GT additive_expression
   49                  | additive_expression GE additive_expression
   50                  | additive_expression NE additive_expression
   51                  | additive_expression EQ additive_expression
   52                  | additive_expression

   53 additive_expression: additive_expression PLUS term
   54                    | additive_expression MINUS term
   55                    | term

   56 term: term TIMES factor
   57     | term OVER factor
   58     | factor

   59 factor: LPAREN expression RPAREN
   60       | var
   61       | call
   62       | num

   63 @4: %empty

   64 call: id @4 LPAREN args RPAREN

   65 args: arg_list
   66     | %empty

   67 arg_list: arg_list COMMA expression
   68         | expression


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 36 37
ELSE (259) 37
WHILE (260) 38
RETURN (261) 39 40
INT (262) 8 10 13 20 22
VOID (263) 9 11 15 17 21 23
ID (264) 2
NUM (265) 3
PLUS (266) 53
MINUS (267) 54
TIMES (268) 56
OVER (269) 57
ASSIGN (270) 41
EQ (271) 51
NE (272) 50
LT (273) 47
LE (274) 46
GT (275) 48
GE (276) 49
LPAREN (277) 13 15 36 37 38 59 64
RPAREN (278) 13 15 36 37 38 59 64
LBRACE (279) 10 11 22 23 45
RBRACE (280) 10 11 22 23 45
LCURLY (281) 24
RCURLY (282) 24
SEMI (283) 8 9 10 11 34 35 39 40
COMMA (284) 18 67
ERROR (285)
NIF (286)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
program (33)
    on left: 1, on right: 0
id (34)
    on left: 2, on right: 8 9 10 11 13 15 20 21 22 23 43 45 64
num (35)
    on left: 3, on right: 10 11 62
declaration_list (36)
    on left: 4 5, on right: 1 4
declaration (37)
    on left: 6 7, on right: 4 5
var_declaration (38)
    on left: 8 9 10 11, on right: 6 25
fun_declaration (39)
    on left: 13 15, on right: 7
@1 (40)
    on left: 12, on right: 13
@2 (41)
    on left: 14, on right: 15
params (42)
    on left: 16 17, on right: 13 15
param_list (43)
    on left: 18 19, on right: 16 18
param (44)
    on left: 20 21 22 23, on right: 18 19
compound_stmt (45)
    on left: 24, on right: 13 15 30
local_declarations (46)
    on left: 25 26, on right: 24 25
statement_list (47)
    on left: 27 28, on right: 24 27
statement (48)
    on left: 29 30 31 32 33, on right: 27 36 37 38
expression_stmt (49)
    on left: 34 35, on right: 29
selection_stmt (50)
    on left: 36 37, on right: 31
iteration_stmt (51)
    on left: 38, on right: 32
return_stmt (52)
    on left: 39 40, on right: 33
expression (53)
    on left: 41 42, on right: 34 36 37 38 40 41 45 59 67 68
var (54)
    on left: 43 45, on right: 41 60
@3 (55)
    on left: 44, on right: 45
simple_expression (56)
    on left: 46 47 48 49 50 51 52, on right: 42
additive_expression (57)
    on left: 53 54 55, on right: 46 47 48 49 50 51 52 53 54
term (58)
    on left: 56 57 58, on right: 53 54 55 56 57
factor (59)
    on left: 59 60 61 62, on right: 56 57 58
call (60)
    on left: 64, on right: 61
@4 (61)
    on left: 63, on right: 64
args (62)
    on left: 65 66, on right: 64
arg_list (63)
    on left: 67 68, on right: 65 67


State 0

    0 $accept: . program $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    program           go to state 3
    declaration_list  go to state 4
    declaration       go to state 5
    var_declaration   go to state 6
    fun_declaration   go to state 7


State 1

    8 var_declaration: INT . id SEMI
   10                | INT . id LBRACE num RBRACE SEMI
   13 fun_declaration: INT . id @1 LPAREN params RPAREN compound_stmt

    ID  shift, and go to state 8

    id  go to state 9


State 2

    9 var_declaration: VOID . id SEMI
   11                | VOID . id LBRACE num RBRACE SEMI
   15 fun_declaration: VOID . id @2 LPAREN params RPAREN compound_stmt

    ID  shift, and go to state 8

    id  go to state 10


State 3

    0 $accept: program . $end

    $end  shift, and go to state 11


State 4

    1 program: declaration_list .

    $default  reduce using rule 1 (program)


State 5

    4 declaration_list: declaration . declaration_list
    5                 | declaration .

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 5 (declaration_list)

    declaration_list  go to state 12
    declaration       go to state 5
    var_declaration   go to state 6
    fun_declaration   go to state 7


State 6

    6 declaration: var_declaration .

    $default  reduce using rule 6 (declaration)


State 7

    7 declaration: fun_declaration .

    $default  reduce using rule 7 (declaration)


State 8

    2 id: ID .

    $default  reduce using rule 2 (id)


State 9

    8 var_declaration: INT id . SEMI
   10                | INT id . LBRACE num RBRACE SEMI
   13 fun_declaration: INT id . @1 LPAREN params RPAREN compound_stmt

    LBRACE  shift, and go to state 13
    SEMI    shift, and go to state 14

    $default  reduce using rule 12 (@1)

    @1  go to state 15


State 10

    9 var_declaration: VOID id . SEMI
   11                | VOID id . LBRACE num RBRACE SEMI
   15 fun_declaration: VOID id . @2 LPAREN params RPAREN compound_stmt

    LBRACE  shift, and go to state 16
    SEMI    shift, and go to state 17

    $default  reduce using rule 14 (@2)

    @2  go to state 18


State 11

    0 $accept: program $end .

    $default  accept


State 12

    4 declaration_list: declaration declaration_list .

    $default  reduce using rule 4 (declaration_list)


State 13

   10 var_declaration: INT id LBRACE . num RBRACE SEMI

    NUM  shift, and go to state 19

    num  go to state 20


State 14

    8 var_declaration: INT id SEMI .

    $default  reduce using rule 8 (var_declaration)


State 15

   13 fun_declaration: INT id @1 . LPAREN params RPAREN compound_stmt

    LPAREN  shift, and go to state 21


State 16

   11 var_declaration: VOID id LBRACE . num RBRACE SEMI

    NUM  shift, and go to state 19

    num  go to state 22


State 17

    9 var_declaration: VOID id SEMI .

    $default  reduce using rule 9 (var_declaration)


State 18

   15 fun_declaration: VOID id @2 . LPAREN params RPAREN compound_stmt

    LPAREN  shift, and go to state 23


State 19

    3 num: NUM .

    $default  reduce using rule 3 (num)


State 20

   10 var_declaration: INT id LBRACE num . RBRACE SEMI

    RBRACE  shift, and go to state 24


State 21

   13 fun_declaration: INT id @1 LPAREN . params RPAREN compound_stmt

    INT   shift, and go to state 25
    VOID  shift, and go to state 26

    params      go to state 27
    param_list  go to state 28
    param       go to state 29


State 22

   11 var_declaration: VOID id LBRACE num . RBRACE SEMI

    RBRACE  shift, and go to state 30


State 23

   15 fun_declaration: VOID id @2 LPAREN . params RPAREN compound_stmt

    INT   shift, and go to state 25
    VOID  shift, and go to state 26

    params      go to state 31
    param_list  go to state 28
    param       go to state 29


State 24

   10 var_declaration: INT id LBRACE num RBRACE . SEMI

    SEMI  shift, and go to state 32


State 25

   20 param: INT . id
   22      | INT . id LBRACE RBRACE

    ID  shift, and go to state 8

    id  go to state 33


State 26

   17 params: VOID .
   21 param: VOID . id
   23      | VOID . id LBRACE RBRACE

    ID  shift, and go to state 8

    $default  reduce using rule 17 (params)

    id  go to state 34


State 27

   13 fun_declaration: INT id @1 LPAREN params . RPAREN compound_stmt

    RPAREN  shift, and go to state 35


State 28

   16 params: param_list .
   18 param_list: param_list . COMMA param

    COMMA  shift, and go to state 36

    $default  reduce using rule 16 (params)


State 29

   19 param_list: param .

    $default  reduce using rule 19 (param_list)


State 30

   11 var_declaration: VOID id LBRACE num RBRACE . SEMI

    SEMI  shift, and go to state 37


State 31

   15 fun_declaration: VOID id @2 LPAREN params . RPAREN compound_stmt

    RPAREN  shift, and go to state 38


State 32

   10 var_declaration: INT id LBRACE num RBRACE SEMI .

    $default  reduce using rule 10 (var_declaration)


State 33

   20 param: INT id .
   22      | INT id . LBRACE RBRACE

    LBRACE  shift, and go to state 39

    $default  reduce using rule 20 (param)


State 34

   21 param: VOID id .
   23      | VOID id . LBRACE RBRACE

    LBRACE  shift, and go to state 40

    $default  reduce using rule 21 (param)


State 35

   13 fun_declaration: INT id @1 LPAREN params RPAREN . compound_stmt

    LCURLY  shift, and go to state 41

    compound_stmt  go to state 42


State 36

   18 param_list: param_list COMMA . param

    INT   shift, and go to state 25
    VOID  shift, and go to state 43

    param  go to state 44


State 37

   11 var_declaration: VOID id LBRACE num RBRACE SEMI .

    $default  reduce using rule 11 (var_declaration)


State 38

   15 fun_declaration: VOID id @2 LPAREN params RPAREN . compound_stmt

    LCURLY  shift, and go to state 41

    compound_stmt  go to state 45


State 39

   22 param: INT id LBRACE . RBRACE

    RBRACE  shift, and go to state 46


State 40

   23 param: VOID id LBRACE . RBRACE

    RBRACE  shift, and go to state 47


State 41

   24 compound_stmt: LCURLY . local_declarations statement_list RCURLY

    $default  reduce using rule 26 (local_declarations)

    local_declarations  go to state 48


State 42

   13 fun_declaration: INT id @1 LPAREN params RPAREN compound_stmt .

    $default  reduce using rule 13 (fun_declaration)


State 43

   21 param: VOID . id
   23      | VOID . id LBRACE RBRACE

    ID  shift, and go to state 8

    id  go to state 34


State 44

   18 param_list: param_list COMMA param .

    $default  reduce using rule 18 (param_list)


State 45

   15 fun_declaration: VOID id @2 LPAREN params RPAREN compound_stmt .

    $default  reduce using rule 15 (fun_declaration)


State 46

   22 param: INT id LBRACE RBRACE .

    $default  reduce using rule 22 (param)


State 47

   23 param: VOID id LBRACE RBRACE .

    $default  reduce using rule 23 (param)


State 48

   24 compound_stmt: LCURLY local_declarations . statement_list RCURLY
   25 local_declarations: local_declarations . var_declaration

    INT   shift, and go to state 49
    VOID  shift, and go to state 50

    $default  reduce using rule 28 (statement_list)

    var_declaration  go to state 51
    statement_list   go to state 52


State 49

    8 var_declaration: INT . id SEMI
   10                | INT . id LBRACE num RBRACE SEMI

    ID  shift, and go to state 8

    id  go to state 53


State 50

    9 var_declaration: VOID . id SEMI
   11                | VOID . id LBRACE num RBRACE SEMI

    ID  shift, and go to state 8

    id  go to state 54


State 51

   25 local_declarations: local_declarations var_declaration .

    $default  reduce using rule 25 (local_declarations)


State 52

   24 compound_stmt: LCURLY local_declarations statement_list . RCURLY
   27 statement_list: statement_list . statement

    IF      shift, and go to state 55
    WHILE   shift, and go to state 56
    RETURN  shift, and go to state 57
    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58
    LCURLY  shift, and go to state 41
    RCURLY  shift, and go to state 59
    SEMI    shift, and go to state 60

    id                   go to state 61
    num                  go to state 62
    compound_stmt        go to state 63
    statement            go to state 64
    expression_stmt      go to state 65
    selection_stmt       go to state 66
    iteration_stmt       go to state 67
    return_stmt          go to state 68
    expression           go to state 69
    var                  go to state 70
    simple_expression    go to state 71
    additive_expression  go to state 72
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


State 53

    8 var_declaration: INT id . SEMI
   10                | INT id . LBRACE num RBRACE SEMI

    LBRACE  shift, and go to state 13
    SEMI    shift, and go to state 14


State 54

    9 var_declaration: VOID id . SEMI
   11                | VOID id . LBRACE num RBRACE SEMI

    LBRACE  shift, and go to state 16
    SEMI    shift, and go to state 17


State 55

   36 selection_stmt: IF . LPAREN expression RPAREN statement
   37               | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 76


State 56

   38 iteration_stmt: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 77


State 57

   39 return_stmt: RETURN . SEMI
   40            | RETURN . expression SEMI

    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58
    SEMI    shift, and go to state 78

    id                   go to state 61
    num                  go to state 62
    expression           go to state 79
    var                  go to state 70
    simple_expression    go to state 71
    additive_expression  go to state 72
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


State 58

   59 factor: LPAREN . expression RPAREN

    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58

    id                   go to state 61
    num                  go to state 62
    expression           go to state 80
    var                  go to state 70
    simple_expression    go to state 71
    additive_expression  go to state 72
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


State 59

   24 compound_stmt: LCURLY local_declarations statement_list RCURLY .

    $default  reduce using rule 24 (compound_stmt)


State 60

   35 expression_stmt: SEMI .

    $default  reduce using rule 35 (expression_stmt)


State 61

   43 var: id .
   45    | id . @3 LBRACE expression RBRACE
   64 call: id . @4 LPAREN args RPAREN

    LPAREN    reduce using rule 63 (@4)
    LBRACE    reduce using rule 44 (@3)
    $default  reduce using rule 43 (var)

    @3  go to state 81
    @4  go to state 82


State 62

   62 factor: num .

    $default  reduce using rule 62 (factor)


State 63

   30 statement: compound_stmt .

    $default  reduce using rule 30 (statement)


State 64

   27 statement_list: statement_list statement .

    $default  reduce using rule 27 (statement_list)


State 65

   29 statement: expression_stmt .

    $default  reduce using rule 29 (statement)


State 66

   31 statement: selection_stmt .

    $default  reduce using rule 31 (statement)


State 67

   32 statement: iteration_stmt .

    $default  reduce using rule 32 (statement)


State 68

   33 statement: return_stmt .

    $default  reduce using rule 33 (statement)


State 69

   34 expression_stmt: expression . SEMI

    SEMI  shift, and go to state 83


State 70

   41 expression: var . ASSIGN expression
   60 factor: var .

    ASSIGN  shift, and go to state 84

    $default  reduce using rule 60 (factor)


State 71

   42 expression: simple_expression .

    $default  reduce using rule 42 (expression)


State 72

   46 simple_expression: additive_expression . LE additive_expression
   47                  | additive_expression . LT additive_expression
   48                  | additive_expression . GT additive_expression
   49                  | additive_expression . GE additive_expression
   50                  | additive_expression . NE additive_expression
   51                  | additive_expression . EQ additive_expression
   52                  | additive_expression .
   53 additive_expression: additive_expression . PLUS term
   54                    | additive_expression . MINUS term

    PLUS   shift, and go to state 85
    MINUS  shift, and go to state 86
    EQ     shift, and go to state 87
    NE     shift, and go to state 88
    LT     shift, and go to state 89
    LE     shift, and go to state 90
    GT     shift, and go to state 91
    GE     shift, and go to state 92

    $default  reduce using rule 52 (simple_expression)


State 73

   55 additive_expression: term .
   56 term: term . TIMES factor
   57     | term . OVER factor

    TIMES  shift, and go to state 93
    OVER   shift, and go to state 94

    $default  reduce using rule 55 (additive_expression)


State 74

   58 term: factor .

    $default  reduce using rule 58 (term)


State 75

   61 factor: call .

    $default  reduce using rule 61 (factor)


State 76

   36 selection_stmt: IF LPAREN . expression RPAREN statement
   37               | IF LPAREN . expression RPAREN statement ELSE statement

    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58

    id                   go to state 61
    num                  go to state 62
    expression           go to state 95
    var                  go to state 70
    simple_expression    go to state 71
    additive_expression  go to state 72
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


State 77

   38 iteration_stmt: WHILE LPAREN . expression RPAREN statement

    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58

    id                   go to state 61
    num                  go to state 62
    expression           go to state 96
    var                  go to state 70
    simple_expression    go to state 71
    additive_expression  go to state 72
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


State 78

   39 return_stmt: RETURN SEMI .

    $default  reduce using rule 39 (return_stmt)


State 79

   40 return_stmt: RETURN expression . SEMI

    SEMI  shift, and go to state 97


State 80

   59 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 98


State 81

   45 var: id @3 . LBRACE expression RBRACE

    LBRACE  shift, and go to state 99


State 82

   64 call: id @4 . LPAREN args RPAREN

    LPAREN  shift, and go to state 100


State 83

   34 expression_stmt: expression SEMI .

    $default  reduce using rule 34 (expression_stmt)


State 84

   41 expression: var ASSIGN . expression

    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58

    id                   go to state 61
    num                  go to state 62
    expression           go to state 101
    var                  go to state 70
    simple_expression    go to state 71
    additive_expression  go to state 72
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


State 85

   53 additive_expression: additive_expression PLUS . term

    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58

    id      go to state 61
    num     go to state 62
    var     go to state 102
    term    go to state 103
    factor  go to state 74
    call    go to state 75


State 86

   54 additive_expression: additive_expression MINUS . term

    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58

    id      go to state 61
    num     go to state 62
    var     go to state 102
    term    go to state 104
    factor  go to state 74
    call    go to state 75


State 87

   51 simple_expression: additive_expression EQ . additive_expression

    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58

    id                   go to state 61
    num                  go to state 62
    var                  go to state 102
    additive_expression  go to state 105
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


State 88

   50 simple_expression: additive_expression NE . additive_expression

    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58

    id                   go to state 61
    num                  go to state 62
    var                  go to state 102
    additive_expression  go to state 106
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


State 89

   47 simple_expression: additive_expression LT . additive_expression

    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58

    id                   go to state 61
    num                  go to state 62
    var                  go to state 102
    additive_expression  go to state 107
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


State 90

   46 simple_expression: additive_expression LE . additive_expression

    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58

    id                   go to state 61
    num                  go to state 62
    var                  go to state 102
    additive_expression  go to state 108
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


State 91

   48 simple_expression: additive_expression GT . additive_expression

    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58

    id                   go to state 61
    num                  go to state 62
    var                  go to state 102
    additive_expression  go to state 109
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


State 92

   49 simple_expression: additive_expression GE . additive_expression

    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58

    id                   go to state 61
    num                  go to state 62
    var                  go to state 102
    additive_expression  go to state 110
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


State 93

   56 term: term TIMES . factor

    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58

    id      go to state 61
    num     go to state 62
    var     go to state 102
    factor  go to state 111
    call    go to state 75


State 94

   57 term: term OVER . factor

    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58

    id      go to state 61
    num     go to state 62
    var     go to state 102
    factor  go to state 112
    call    go to state 75


State 95

   36 selection_stmt: IF LPAREN expression . RPAREN statement
   37               | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 113


State 96

   38 iteration_stmt: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 114


State 97

   40 return_stmt: RETURN expression SEMI .

    $default  reduce using rule 40 (return_stmt)


State 98

   59 factor: LPAREN expression RPAREN .

    $default  reduce using rule 59 (factor)


State 99

   45 var: id @3 LBRACE . expression RBRACE

    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58

    id                   go to state 61
    num                  go to state 62
    expression           go to state 115
    var                  go to state 70
    simple_expression    go to state 71
    additive_expression  go to state 72
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75


State 100

   64 call: id @4 LPAREN . args RPAREN

    ID      shift, and go to state 8
    NUM     shift, and go to state 19
    LPAREN  shift, and go to state 58

    $default  reduce using rule 66 (args)

    id                   go to state 61
    num                  go to state 62
    expression           go to state 116
    var                  go to state 70
    simple_expression    go to state 71
    additive_expression  go to state 72
    term                 go to state 73
    factor               go to state 74
    call                 go to state 75
    args                 go to state 117
    arg_list             go to state 118

